# rust_homeworks

10_web_development/: README.md
10_web_development/server/: Cargo.toml
10_web_development/server/src/: main.rs  web_server.rs
10_web_development/server/static/: index.html
10_web_development/shared/src/: lib.rs
1_hello_world/src/: main.rs
2_rust_basics/: Cargo.toml
3_error_handling/: Cargo.toml
3_error_handling/src/: csv_mod.rs  main.rs
4_multi_threading/src/: csv_mod.rs  main.rs
5_network/: Cargo.toml
5_network/src/: client.rs  csv_example.txt  csv_mod.rs  main.rs  message.rs  server.rs
6_chat_application/: README.md
6_chat_application/client/: Cargo.toml
6_chat_application/client/src/: main.rs
6_chat_application/server/: Cargo.toml
6_chat_application/server/src/: main.rs
6_chat_application/shared/: Cargo.toml
6_chat_application/shared/src/: lib.rs
7_EH_CET/: Cargo.toml  README.md
7_EH_CET/client/: Cargo.toml
7_EH_CET/client/src/: main.rs
7_EH_CET/server/: Cargo.toml
7_EH_CET/server/src/: main.rs
7_EH_CET/shared/: Cargo.toml
7_EH_CET/shared/src/: lib.rs
8_Async_Tokio/: README.md
8_Async_Tokio/client/: Cargo.toml
8_Async_Tokio/client/src/: main.rs
8_Async_Tokio/server/: Cargo.toml
8_Async_Tokio/server/src/: main.rs
8_Async_Tokio/shared/src/: lib.rs
9_testing_and_documentation/: bla.rs
9_testing_and_documentation/client/src/: main.rs
9_testing_and_documentation/server/: Cargo.toml  build.rs
9_testing_and_documentation/server/src/: main.rs
make_corrupt_file/src/: main.rs
src/: main.rs
