[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
chrono = "0.4"
tracing-subscriber = "0.2"
tracing = "0.1.40"
thiserror = "1.0.61"
anyhow = "1.0.86"
image = "0.25.1"
tokio = { version = "1.38.0", features = ["full"] }
sqlx = { version = "0.7.4", features = ["runtime-tokio-native-tls", "postgres", "time", "chrono"] }
dotenv = "0.15.0"

[dev-dependencies]
tokio = { version = "1.38.0", features = ["full"] }
tracing-subscriber = "0.2"
dotenv = "0.15.0"
sqlx = { version = "0.7.4", features = ["runtime-tokio-native-tls", "postgres", "time", "chrono"] }
